# epee

./: .gitignore  CMakeLists.txt  README.md
docs/: index.html
libs/: CMakeLists.txt  CTestTestfile.cmake
libs/ctfile/include/ctfile_bits/: cexpr_file.hpp  version.hpp
libs/ctfile/tests/: cexpr_file.cpp  tests.hpp
libs/dice/calc/: aug_monte.py
libs/dice/include/: dice
libs/dice/include/dice_bits/: dice.hpp  dice_pool.hpp  prob.hpp  roll_statement.hpp
libs/dice/src/: dice_pool.cpp
libs/filesys/include/: filesys
libs/filesys/include/filesys_bits/: cexpr_file.hpp  file.hpp  stream.hpp  types.hpp  updater.hpp  version.hpp
libs/filesys/src/: types.cpp  updater.cpp
libs/filesys/tests/: cexpr_file.cpp  main.cpp  tests.hpp  updater.cpp
libs/libs/: CMakeLists.txt
libs/libs/ctfile/include/: ctfile
libs/libs/ctfile/include/ctfile_bits/: stream.hpp  updater.hpp
libs/libs/ctfile/src/: updater.cpp
libs/libs/ctfile/tests/: tests.hpp
libs/libs/dice/calc/: aug_monte.py
libs/libs/dice/include/dice_bits/: dice_pool.hpp  roll_order.hpp
libs/libs/dice/tests/: benchmark.cpp
src/: CMakeLists.txt
src/character_sheet/: man.cpp  man.hpp  sheet.cpp  sheet.hpp
src/options/: options.cpp  options.hpp
tests/: CMakeLists.txt
